Bug 301152 - Kontact - Personal Information Manager has been crashed!
Summary: Kontact - Personal Information Manager has been crashed!
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.3
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-04 12:18 UTC by Sebastian
Modified: 2012-06-04 12:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sebastian 2012-06-04 12:18:56 UTC
Application: kontact (4.8.3)
KDE Platform Version: 4.8.3 (4.8.3)
Qt Version: 4.8.1
Operating System: Linux 3.2.0-24-generic x86_64
Distribution: Ubuntu 12.04 LTS

-- Information about the crash:
- What I was doing when the application crashed:

Sry for my English I will try to describe what I was doing the best I can.

1. I have opened "Settings > Configure Contact...".
2. I have gona to "Mail | Identies".
3. I have created 2 Identies (qic@qic.qic and, xyzsebastian@gmail.com). 
4. I have deleted 2nd identity (xyzsebastian@gmail.com) by pressing "Remove" button and the operation has been completed succesful. After that I have tried to deleted 1st identity (qic@qic.qic) by pressing "Remove" button again  (the "Remove" button has been enabled, not blank) and then application has been crashed!

Finally, when I have run the application again the 1st identity has not been deleted. It is still on the list... and I think it must be, because "Remove" button was always disabled when there was only one Identity on the list.

-- Backtrace:
Application: Kontact (kontact), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f02f559c7c0 (LWP 2734))]

Thread 4 (Thread 0x7f02d8b28700 (LWP 2735)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f02f1d8adec in ?? () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#2  0x00007f02f1d8af19 in ?? () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#3  0x00007f02ed250e9a in start_thread (arg=0x7f02d8b28700) at pthread_create.c:308
#4  0x00007f02f2abc4bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f02d8327700 (LWP 2736)):
#0  0x00007f02f2aaf0bd in read () at ../sysdeps/unix/syscall-template.S:82
#1  0x00007f02ecdbe88f in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f02ecd83abd in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f02ecd83f96 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f02ecd84124 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f02f3231426 in QEventDispatcherGlib::processEvents (this=0x7f02d00008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0x00007f02f3200c82 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007f02f3200ed7 in QEventLoop::exec (this=0x7f02d8326dc0, flags=...) at kernel/qeventloop.cpp:204
#8  0x00007f02f30fffa7 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#9  0x00007f02f3102fcb in QThreadPrivate::start (arg=0x8faa10) at thread/qthread_unix.cpp:298
#10 0x00007f02ed250e9a in start_thread (arg=0x7f02d8327700) at pthread_create.c:308
#11 0x00007f02f2abc4bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f028993d700 (LWP 2746)):
#0  0x00007fff3fbff8de in ?? ()
#1  0x00007f02eb5b415d in __GI_clock_gettime (clock_id=<optimized out>, tp=<optimized out>) at ../sysdeps/unix/clock_gettime.c:116
#2  0x00007f02f3159bb4 in do_gettime (frac=0x7f028993cb58, sec=0x7f028993cb50) at tools/qelapsedtimer_unix.cpp:123
#3  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#4  0x00007f02f3231b8d in QTimerInfoList::updateCurrentTime (this=0x7f027c002860) at kernel/qeventdispatcher_unix.cpp:343
#5  0x00007f02f3231ec3 in QTimerInfoList::timerWait (this=0x7f027c002860, tm=...) at kernel/qeventdispatcher_unix.cpp:450
#6  0x00007f02f323097c in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7f028993cc2c) at kernel/qeventdispatcher_glib.cpp:136
#7  0x00007f02f3230a25 in timerSourcePrepare (source=<optimized out>, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#8  0x00007f02ecd8371e in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#9  0x00007f02ecd83f1b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#10 0x00007f02ecd84124 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#11 0x00007f02f3231426 in QEventDispatcherGlib::processEvents (this=0x7f027c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#12 0x00007f02f3200c82 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#13 0x00007f02f3200ed7 in QEventLoop::exec (this=0x7f028993cd90, flags=...) at kernel/qeventloop.cpp:204
#14 0x00007f02f30fffa7 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#15 0x00007f02f31e09ff in QInotifyFileSystemWatcherEngine::run (this=0xf998d0) at io/qfilesystemwatcher_inotify.cpp:248
#16 0x00007f02f3102fcb in QThreadPrivate::start (arg=0xf998d0) at thread/qthread_unix.cpp:298
#17 0x00007f02ed250e9a in start_thread (arg=0x7f028993d700) at pthread_create.c:308
#18 0x00007f02f2abc4bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#19 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f02f559c7c0 (LWP 2734)):
[KCrash Handler]
#6  0x00007f02f2a00445 in __GI_raise (sig=<optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#7  0x00007f02f2a03bab in __GI_abort () at abort.c:91
#8  0x00007f02f30f850b in qt_message_output (msgType=<optimized out>, buf=0x339ffd8 "kontact(2734): Attempted to remove the last identity! ") at global/qglobal.cpp:2276
#9  0x00007f028fb4b79b in ~QDebug (this=0x7fff3fb1da60, __in_chrg=<optimized out>) at /usr/include/qt4/QtCore/qdebug.h:85
#10 KMail::IdentityPage::slotRemoveIdentity (this=0x37329b0) at ../../kmail/identitypage.cpp:215
#11 0x00007f02f3216281 in QMetaObject::activate (sender=0x38c1d90, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff3fb1dd30) at kernel/qobject.cpp:3547
#12 0x00007f02f4287c72 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#13 0x00007f02f3fc5a4e in QAbstractButtonPrivate::emitClicked (this=<optimized out>) at widgets/qabstractbutton.cpp:548
#14 0x00007f02f3fc6d8b in QAbstractButtonPrivate::click (this=0x24af180) at widgets/qabstractbutton.cpp:541
#15 0x00007f02f3fc6ffc in QAbstractButton::mouseReleaseEvent (this=0x38c1d90, e=0x7fff3fb1e600) at widgets/qabstractbutton.cpp:1123
#16 0x00007f02f3c48144 in QWidget::event (this=0x38c1d90, event=0x7fff3fb1e600) at kernel/qwidget.cpp:8362
#17 0x00007f02f3bf7894 in notify_helper (e=0x7fff3fb1e600, receiver=0x38c1d90, this=0x758310) at kernel/qapplication.cpp:4559
#18 QApplicationPrivate::notify_helper (this=0x758310, receiver=0x38c1d90, e=0x7fff3fb1e600) at kernel/qapplication.cpp:4531
#19 0x00007f02f3bfd0bf in QApplication::notify (this=<optimized out>, receiver=0x38c1d90, e=0x7fff3fb1e600) at kernel/qapplication.cpp:4102
#20 0x00007f02f4930bb6 in KApplication::notify (this=0x7fff3fb1f2e0, receiver=0x38c1d90, event=0x7fff3fb1e600) at ../../kdeui/kernel/kapplication.cpp:311
#21 0x00007f02f3201e9c in QCoreApplication::notifyInternal (this=0x7fff3fb1f2e0, receiver=0x38c1d90, event=0x7fff3fb1e600) at kernel/qcoreapplication.cpp:876
#22 0x00007f02f3bf8862 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#23 QApplicationPrivate::sendMouseEvent (receiver=0x38c1d90, event=0x7fff3fb1e600, alienWidget=0x0, nativeWidget=0x38c1d90, buttonDown=0x0, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3170
#24 0x00007f02f3c77bf5 in QETWidget::translateMouseEvent (this=0x38c1d90, event=<optimized out>) at kernel/qapplication_x11.cpp:4617
#25 0x00007f02f3c76bae in QApplication::x11ProcessEvent (this=0x7fff3fb1f2e0, event=0x7fff3fb1eed0) at kernel/qapplication_x11.cpp:3732
#26 0x00007f02f3ca00d2 in x11EventSourceDispatch (s=0x75a130, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#27 0x00007f02ecd83c9a in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#28 0x00007f02ecd84060 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007f02ecd84124 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007f02f32313bf in QEventDispatcherGlib::processEvents (this=0x71fc10, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#31 0x00007f02f3c9fd5e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#32 0x00007f02f3200c82 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#33 0x00007f02f3200ed7 in QEventLoop::exec (this=0x7fff3fb1f270, flags=...) at kernel/qeventloop.cpp:204
#34 0x00007f02f3205f67 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#35 0x0000000000403629 in main (argc=1, argv=0x7fff3fb1f908) at ../../../kontact/src/main.cpp:218

Possible duplicates by query: bug 283935.

Reported using DrKonqi
Comment 1 Sebastian 2012-06-04 12:31:16 UTC
The application crash every time. If you wanna check this, you have to:
1. Create 2 identities.
2. Close the "Configure" window and open it again. Go to Main | Identities.
3. Try to remove both identities.

I thing the "Remove" button must be disabled always when there is only one Identity on the list. It should resolve the problem.
Comment 2 Laurent Montel 2012-06-04 12:48:04 UTC
Git commit 0903abfd4d70532faceabe0604f72bef4c51cb52 by Montel Laurent.
Committed on 04/06/2012 at 14:47.
Pushed by mlaurent into branch 'master'.

Fix Bug 301152 - Kontact - Personal Information Manager has been

crashed!
too late for 4.8.4
FIXED-IN: 4.8.5

M  +7    -1    kmail/identitypage.cpp
M  +1    -1    kmail/identitypage.h

http://commits.kde.org/kdepim/0903abfd4d70532faceabe0604f72bef4c51cb52
Comment 3 Laurent Montel 2012-06-04 12:48:57 UTC
Git commit 27d7c386ea93010ddfcfd0f5456a8ef952c07325 by Montel Laurent.
Committed on 04/06/2012 at 14:47.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 301152 - Kontact - Personal Information Manager has been

crashed!
too late for 4.8.4
FIXED-IN: 4.8.5
(cherry picked from commit 0903abfd4d70532faceabe0604f72bef4c51cb52)

M  +7    -1    kmail/identitypage.cpp
M  +1    -1    kmail/identitypage.h

http://commits.kde.org/kdepim/27d7c386ea93010ddfcfd0f5456a8ef952c07325