Fix Bug 301152 - Kontact - Personal Information Manager has been

crashed!
too late for 4.8.4
FIXED-IN: 4.8.5
BUG: 301152